# trec-car-create

./: README.mkd  cabal.project  default.nix  hie.yaml
filter-duplicates/: filter-duplicates.cabal
mediawiki-convert/: Export.hs  ExportClusterBenchmark.hs  FillMetadataMain.hs  FilterPages.hs  JsonlConversionMain.hs  JsonlImport.hs  JsonlProvenanceExportMain.hs  SplitJsonL.hs  TransformContent.hs  WikiDataCrossSite.hs  mediawiki-convert.cabal
mediawiki-convert/src/: StreamJSON.hs  WikiData.hs
mediawiki-convert/src/CAR/: CarJSON.hs  FillMetadata.hs  FilterPred.hs
mediawiki-import/: mediawiki-import.cabal
mediawiki-import/src/CAR/: Import.hs
mediawiki-import/src/CAR/Import/: ConfigFile.hs
miso-postprocessing/: miso-postprocessing.cabal
miso-types/: miso-types.cabal
miso-types/src/: Types.hs
multilang-car/: LangIndex.hs  WikiDataCrossSite.hs  WikiDataQid.hs  multilang-car.cabal
tqa-import/: tqa-import.cabal
