name:                multilang-car
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
-- category:            
build-type:          Simple
cabal-version:       >=1.10

-- library
--   exposed-modules:     src/WikiDataQid
--   other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TypeApplications, DeriveGeneric
--   build-depends:       base,
--                        aeson >=1.1 && <1.5,
--                        hashable >=1.2 && <1.4,
--                        bytestring >=0.10 && <0.11,
--                        unordered-containers >=0.2 && <0.3,
--                        text >=1.2 && <1.3,
--                        serialise >=0.2 && <0.3,
--                        json-stream >=0.4 && <0.5,
--                        trec-car-types,
--                        trec-car-tools,
--                        mediawiki-convert
--   default-language:    Haskell2010


executable trec-car-cross-site
  main-is:             WikiDataCrossSite.hs
  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TypeApplications, DeriveGeneric
  build-depends:       base,
                       aeson >=1.1 && <1.5,
                       hashable >=1.2 && <1.4,
                       bytestring >=0.10 && <0.11,
                       unordered-containers >=0.2 && <0.3,
                       text >=1.2 && <1.3,
                       serialise >=0.2 && <0.3,
                       json-stream >=0.4 && <0.5,
                       trec-car-types,
                       trec-car-tools,
                       mediawiki-convert
  default-language:    Haskell2010

